# Software_Engi

./: .gitignore  CMakeLists.txt  Dockerfile  HelloProjConfig.h.in  README.md  hello.cpp
.github/workflows/: CD.yml
Simtown/: building.cpp  dyn_array.h  rock.cpp
include/basic/: building.h  message.h  rock.h
mains/: CMakeLists.txt  hello.cpp  sim_town.cpp
src/basic/: CMakeLists.txt  message.cpp
src/sim/: CMakeLists.txt  building.cpp  rock.cpp
tests/: CMakeLists.txt  test-version.cpp
